# sqlcipher-demo

./: Makefile.am  autogen.sh  configure.ac
tests/: test1.cc
tests/data/: demo.sqlcipher
